apps/objects/issue-agent/httproute-hub.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: issue-agent-hub
spec:
  parentRefs:
    - name: bhyoo-gateway
      namespace: ingress-ctrl
      sectionName: https
  hostnames:
    - hapi.bhyoo.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: issue-agent-hub
          port: 3006
